--- a/Flexbox/News Article Listing/Starter/css/main.css
+++ b/Flexbox/News Article Listing/Starter/css/main.css
@@ -1,9 +1,46 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    margin: 0 6.7em;
-    background: #FCF5EB;
-    font-family: "Poppins";
+  margin: 0 6.7em;
+  background: #fcf5eb;
+  font-family: 'Poppins';
+}
+
+h1 {
+  font-family: 'Playfair Display';
+}
+
+h1.mainhead {
+  font-size: 4.4rem;
+  margin-top: 5em;
+  position: relative;
+}
+
+h1.mainhead::before {
+  content: 'N';
+  position: absolute;
+  top: -13rem;
+  left: -8rem;
+  font-size: 30rem;
+  color: rgba(0, 0, 0, 0.05);
+}
+
+main {
+  margin: 5em;
+}
+
+section {
+  display: flex;
+  gap: 5.7em;
+  border-top: 1px solid black;
+}
+
+section h1 {
+  font-size: 2.2rem;
+}
+
+p {
+  font-size: 1.4rem;
 }
