--- a/Flexbox Responsive/Responsive Drum Module/Before/css/main.css
+++ b/Flexbox Responsive/Responsive Drum Module/Before/css/main.css
@@ -9,25 +9,31 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  display: grid;
-  place-content: center;
   background-color: #d7ded3;
   font-family: 'Poppins';
 }
 
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 section {
   background: white;
-  padding: 7em;
-  width: 1200px;
+  padding: 3em;
   border-radius: 0.8em;
   display: flex;
+  flex-direction: column;
   gap: 13.5em;
+}
+
+.hide-mobile {
+  display: none;
 }
 
 .left-col {
   display: flex;
   flex-direction: column;
-  height: 100%;
   flex: 0.6;
 }
 
@@ -65,7 +71,7 @@ a.cta p {
 }
 
 .box {
-  width: 30%;
+  width: calc(50% - 2em);
   aspect-ratio: 1/1;
   gap: 1em;
   border-radius: 0.6em;
@@ -91,4 +97,24 @@ a.cta p {
 }
 .box:nth-of-type(5) {
   background-color: #bbc8e1;
+}
+
+@media screen and (min-width: 800px) {
+  .wrapper {
+    margin: 10em auto;
+  }
+
+  .hide-mobile {
+    display: block;
+  }
+
+  .box {
+    width: calc(33.333% - 2em);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  section {
+    flex-direction: row;
+  }
 }
