Finish Car Gallery

--- a/Grid/Car Gallery/Before/css/main.css
+++ b/Grid/Car Gallery/Before/css/main.css
@@ -1,10 +1,40 @@
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    margin: 0;
-    height: 100vh;
-    background: #1F1F1F;
+  margin: 0;
+  height: 100vh;
+  background: #1f1f1f;
 }
 
+.gallery {
+  max-width: 1200px;
+  margin: 7em auto;
+  height: 513px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 40% 1fr;
+}
+
+.item {
+  background-size: cover;
+  background-position: center;
+}
+
+.item:nth-last-of-type(1) {
+  background-image: url('../assets/car1.jpg');
+  grid-column: 2 / 4;
+}
+.item:nth-last-of-type(2) {
+  background-image: url('../assets/car2.jpg');
+}
+.item:nth-last-of-type(3) {
+  background-image: url('../assets/car3.jpg');
+}
+.item:nth-last-of-type(4) {
+  background-image: url('../assets/car4.jpg');
+}
+.item:nth-last-of-type(5) {
+  background-image: url('../assets/car5.jpg');
+}
