--- a/Grid/Calendar/Before/css/main.css
+++ b/Grid/Calendar/Before/css/main.css
@@ -1,13 +1,67 @@
+:root {
+  --primary: #156ac4;
+  --secondary: #e1e9f0;
+}
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background: #0460BC;
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
+  background: var(--primary);
+  font-family: 'Poppins', sans-serif;
+  height: 100vh;
+}
+
+section {
+  background: white;
+  border-radius: 1em;
+  width: 380px;
+  padding: 2em;
+  margin: 20em auto;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 1em 0;
+}
+
+h1 {
+  margin: 0;
+  font-weight: normal;
+  font-size: 2rem;
+  line-height: 2em;
+}
+
+a {
+  background-color: var(--secondary)
+  padding: 0.8em 0.8em 0.4em;
+  border-radius: 0.3em;
+}
+
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  font-size: 1.7rem;
+  height: 100%;
+  text-align: center;
+  margin-top: 1em;
+  gap: 1em;
+}
+
+.gray {
+  color: gray;
+}
+
+span {
+  cursor: pointer;
+}
+
+span:hover { 
+  background: var(--secondary);
+  border-radius: .3em;
 }
