Finish Recall - Features Section

--- a/Project 1 - Recall/Before/css/main.css
+++ b/Project 1 - Recall/Before/css/main.css
@@ -1,17 +1,117 @@
 :root {
-    --primary-color: #7E00FD;
+  --primary-color: #7e00fd;
+  --sans: 'Nunito', sans-serif;
+  --serif: 'Playfair Display', serif;
 }
 
-html {font-size: 62.5%;}
+html {
+  font-size: 62.5%;
+}
 
-p, a {font-size: 1.8rem;}
-a {text-decoration: none;}
-ul {list-style-type:none;margin:0;padding:0;}
-.header-cta, .arrow {display: none;}
-.wrapper { margin: 2.6em; }
+p,
+a {
+  font-size: 1.8rem;
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.header-cta,
+.arrow {
+  display: none;
+}
+.wrapper {
+  margin: 2.6em;
+}
 
 body {
-    font-family: 'Nunito', sans-serif;
-    margin: 0;
+  font-family: var(--sans);
+  margin: 0;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a.logo {
+  color: var(--primary-color);
+  font-weight: bold;
+  font-size: 2.8rem;
+}
+
+header ul {
+  display: flex;
+  gap: 2.2em;
+}
+
+header ul li a {
+  color: #000;
+}
+
+a.active {
+  text-decoration: underline;
+}
+
+/* Hero Section */
+section.hero {
+  text-align: center;
+}
+
+h1 {
+  font-size: 3.2rem;
+  margin-top: 2em;
+  margin-bottom: 0.5em;
+}
+
+p.subhead {
+  font-size: 2rem;
+}
+
+.cta-btns {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+  margin-top: 3em;
+}
+
+.phone {
+  width: 90%;
+  margin-top: 5em;
+  position: relative;
+  z-index: 2;
+}
+
+/* Features section */
+section.features {
+  background-color: var(--primary-color);
+  color: white;
+  transform: skewY(12deg) translateY(-8em);
+}
+
+section.features .wrapper {
+  transform: skewY(-12deg);
+}
+
+section.features .wrapper ul {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+  padding: 5em 0 10em;
+}
+
+section.features svg {
+  width: 3.5rem;
+  margin-left: -0.15em;
+}
+
+section.features strong  {
+  display: flex;
+  flex-direction: column;
+  font-size: 2.6rem;
+}
