Tablet Testimonials & Footer

--- a/Project 1 - Recall/Before/css/main.css
+++ b/Project 1 - Recall/Before/css/main.css
@@ -234,4 +234,55 @@ nav.secondary-nav a {
   .cta-btns {
     justify-content: left;
   }
+
+  /* Features section */
+  section.features {
+    transform: skewY(7deg) translateY(-8em);
+  }
+
+  section.features .wrapper {
+    transform: skewY(-7deg);
+  }
+
+  section.features::before {
+    content: '';
+    position: absolute;
+    background: url(../assets/graphic.svg) no-repeat;
+    width: 205px;
+    height: 80px;
+    bottom: -30px;
+    left: 10%;
+  }
+
+  section.features .wrapper ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    padding: 7em 0 12em;
+  }
+
+  section.features .wrapper ul li:last-of-type {
+    grid-column: 1 / 3;
+  }
+
+  /* Testimonials section */
+  .testimonial-info {
+    display: flex;
+    gap: 2em;
+  }
+
+  .author-pic,
+  .author {
+    flex: 1;
+  }
+
+  .author-pic {
+    margin: 0;
+  }
+
+  .author {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
